base/public/index.css
* { box-sizing: border-box; user-select: none; }
*[hidden] { display: none !important; }
html, body { height: 100%; }
body { margin: 0; font-family: sans-serif; }
body > .big { padding: 1em; font-size: 2em; }

input, textarea, select, button { font: inherit; }

/* Lobby */
.lobby { padding: 1em; }
.lobby .createRoom { flex: 1; }
.lobby h1 { margin: 0; padding-bottom: 1em; }

.lobby .rooms table { border-collapse: collapse; }
.lobby .rooms tr { cursor: pointer; background: #eee; }
.lobby .rooms tr:hover { background: #888; }
.lobby .rooms tr:active { background: #666; color: #fff; }
.lobby .rooms td { padding: 0.5em; }
.lobby .rooms td.playerCount { width: 0; }
.lobby .rooms td.roomName { width: 100%; }
.lobby .rooms td.playerCount div { background: #ccc; padding: 0.25em 0.5em; border-radius: 0.5em; }

/* Room */
.room { display: flex; height: 100%; }

.main { flex: 1; display: flex; position: relative; }
.main canvas { flex: 1; width: 100%; height: 100%; }
.main .toggleSide { position: absolute; top: 0.5em; right: 0.5em; opacity: 0.5; }

.side { width: 300px; }

.side { display: flex; flex-flow: column; }
.side .buttons { display: flex; }
.side .buttons > div { flex: 1; text-align: center; padding: 0.5em; background: #bbb; color: #777; }
.side .buttons > div.home { flex: initial; }
.side .buttons > div:not(:last-child) { border-right: 1px solid #aaa; }
.side .buttons > div.active { background: #ddd; font-weight: bold; color: #444; }
.side .buttons > div:hover { background: #ddd; }

.side .tabs { flex: 1; display: flex; }
.side .tabs > div { flex: 1; }

.chat { display: flex; flex-flow: column; }
.chat .log { flex: 1; overflow-y: scroll; padding: 0.5em; word-wrap: break-word; background: #888; }
.chat .input { font-size: 0; }
.chat .input textarea {
  width: 100%; resize: none;
  font-size: 16px; padding: 0.5em;
  background: #444; border: none; color: #fff;
}

.playerList { overflow-y: scroll; word-wrap: break-word; background: #888; }
.playerList > div { padding: 0.5em; }

